Login and Register page CSS fixes

--- a/UniMeet/public/login.html
+++ b/UniMeet/public/login.html
@@ -14,10 +14,12 @@
 </head>
 <body>
   <div class="view_panel">
-   <div class="header_image"></div>
+   <div class="header_image">
+      </div>
  </div>
  <div class="login_panel">
   <div class="login_form">
+    <a href="/"><img src="images/logo.png" class="loginLogo" alt="uniMeet"></a>
     <h3 class="uniMeet_title">uniMeet.</h3>
     <h1 class="login_title">Find like-minded people.</h1>
 
@@ -30,7 +32,7 @@
     <button class="form_login_google_btn" id="quickstart-sign-in">Sign in with Google</button>
     
   </div>
-  <button type="submit" id="signupBtn" class="form_signup_btn">Don't have an account? <b>Sign up</b> here.</button>
+  <button type="submit" id="signupBtn" class="form_signup_btn">Or don't have an account? <b>Sign up</b> here.</button>
 </div>
 
 
