--- a/UniMeet/public/register.html
+++ b/UniMeet/public/register.html
@@ -17,12 +17,13 @@
 <body>
   <div class="signup_panel">
     <div class="login_form">
+     <a href="/"><img src="images/logo.png" class="loginLogo" alt="uniMeet"></a>
       <h3 class="sml_title">uniMeet.</h3>
       <h1 class="large_title"><b>Create</b> an account.</h1>
       <form id="signUpForm" onsubmit="return false;" method="post">
         <input type="email" class="form_field" id="email" name="email" placeholder="Email" required>
         <input type="password" class="form_field" id="password" name="password" placeholder="Password" required>
-        <input type="password" class="form_field" id="confirmPassword" name="confirmPassword" placeholder="Password (repeat)" required>
+        <input type="password" class="form_field" id="confirmPassword" name="confirmPassword" placeholder="Repeat Password" required>
         <div class="warning" id="warning"></div>
         <button id="signUpButton" class="form_login_btn" type="submit">Sign Up</button>
       </form>
