--- a/UniMeet/public/messaging.html
+++ b/UniMeet/public/messaging.html
@@ -34,7 +34,10 @@
 <body>
 <div style="height: 64px"></div>
 <div class="mainView">
-  <div id="userBar" class="userBar"> </div>
+  <div id="userBar" class="userBar">
+	<button id="refreshButton" type="submit"> Refresh </button>
+	<button id="newConversation" class="Conversation" type="submit">New Conversation</button>
+	</div>
   <div class="messagesView">
 	  <div id="messages" class="messages"></div>
     <form id="messageForm" class="messageForm" action="#">
