--- a/UniMeet/public/navigation.html
+++ b/UniMeet/public/navigation.html
@@ -21,7 +21,7 @@
       <a href="/matching.html">Recommendations</a>
     <a href="/matching.html">My Matches</a>
     <a href="/friends.html">Friends</a>
-    <a href="/messagingOld.html">Messages</a>
+    <a href="/messaging.html">Messages</a>
     <a href="" id="logoutBtn">Log Out</a>
   </div>
 </nav>
