--- a/UniMeet/public/user_profile.html
+++ b/UniMeet/public/user_profile.html
@@ -23,7 +23,7 @@
 </head>
 <header>
   <nav class="navigationBar"><a href="/"><img src="images/logo.png" class="logoPos" alt="uniMeet"></a>
-    <div class="menuItems"><a href="/matching.html">Matches</a><a href="/friends.html">Friends</a><a href="/messagingOld.html">Messages</a><a href="" id="logoutBtn">Log Out</a></div>
+    <div class="menuItems"><a href="/matching.html">Matches</a><a href="/friends.html">Friends</a><a href="/messaging.html">Messages</a><a href="" id="logoutBtn">Log Out</a></div>
   </nav>
 </header>
 
