--- a/UniMeet/public/setup.html
+++ b/UniMeet/public/setup.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="styles/setup.css">
+	<link rel="stylesheet" href="styles/main.css">
   <title>Setup</title>
 
   <!-- FIREBASE -->
@@ -16,9 +17,13 @@
 </head>
 
 <body>
-
+	<div class="view_panel">
   <form id="regForm" action="/action_page.php">
-    <h1>Let's set up your profile.</h1>
+	  
+	  <a href="/"><img src="images/logo.png" class="loginLogo" alt="uniMeet"></a>
+      <h3 class="sml_title">uniMeet.</h3>
+	  
+    <h1><b>Set up</b> your profile.</h1>
     <!-- One "tab" for each step in the form: -->
     <div class="tab">Let's start with the basics.
       <p><input placeholder="First name" oninput="this.className = ''" name="fname"></p>
@@ -27,25 +32,25 @@
     </div>
     <div class="tab">Where are you currently studying?
       <p><select id="university" oninput="this.className = ''" name="university" onchange="loadDegrees()">
-      <option value="" hidden>-Please select your university-</option>
+      <option value="" hidden>Please select your university</option>
       </select></p>
       <span id="degreeQuestion" style="display: none">What degree are you currently studying?</span>
       <p><select id="degree" oninput="this.className = ''" name="degree" style="display: none">
-        <option value="" hidden>-Please select your degree-</option>
+        <option value="" hidden>Please select your degree</option>
       </select></p>
     </div>
     <div class="tab">What subjects are you currently taking?
       <p><select id="subject1" oninput="this.className = ''" name="subject1">
-        <option value="" hidden> -Please select your subject-</option>
+        <option value="" hidden>Please select your first course</option>
       </select></p>
       <p><select id="subject2" oninput="this.className = ''" name="subject2">
-        <option value="" hidden> -Please select your subject-</option>
+        <option value="" hidden>Please select your second course</option>
       </select></p>
       <p><select id="subject3" oninput="this.className = ''" name="subject3">
-        <option value="" hidden> -Please select your subject-</option>
+        <option value="" hidden>Please select your third course</option>
       </select></p>
       <p><select id="subject4" oninput="this.className = ''" name="subject4">
-        <option value="" hidden> -Please select your subject-</option>
+        <option value="" hidden>Please select your fourth course</option>
       </select></p>
     </div>
     <div class="tab">What are your interests?
@@ -73,6 +78,10 @@
       <span class="step"></span>
     </div>
   </form>
+		</div>
+	<div class="image_panel">
+    <div class="header_image"></div>
+  </div>
   
   <script src="scripts/jquery.min.js"></script>
   <script src="scripts/setup.js?1"></script>
