--- a/UniMeet/public/user_profile.html
+++ b/UniMeet/public/user_profile.html
@@ -34,6 +34,7 @@
   <div class="shortcut_container">
     <button id="messageBtn" class=" button shortcut_buttons">Message</button>
     <button id="friendBtn" class=" button shortcut_buttons">Add Friend</button>
+    <button id="rejBtn" class=" button shortcut_buttons"></button>
     <button class="button shortcut_buttons">More</button>
   </div>
   <div class="avatar"> <img id="profilePicture" class="profilePicture"> </div>
