--- a/UniMeet/public/user_profile.html
+++ b/UniMeet/public/user_profile.html
@@ -1,25 +1,25 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>User Profile</title>
+  <meta charset="UTF-8">
+  <title>User Profile</title>
 
-<!-- FIREBASE -->
-<script src="/__/firebase/5.4.0/firebase-app.js"></script>
-<script src="/__/firebase/5.4.0/firebase-auth.js"></script>
-<script src="/__/firebase/5.4.0/firebase-firestore.js"></script>
-<script src="/__/firebase/5.4.0/firebase-functions.js"></script>
-<script src="/__/firebase/init.js"></script>
-<!-- FIREBASE -->
+  <!-- FIREBASE -->
+  <script src="/__/firebase/5.4.0/firebase-app.js"></script>
+  <script src="/__/firebase/5.4.0/firebase-auth.js"></script>
+  <script src="/__/firebase/5.4.0/firebase-firestore.js"></script>
+  <script src="/__/firebase/5.4.0/firebase-functions.js"></script>
+  <script src="/__/firebase/init.js"></script>
+  <!-- FIREBASE -->
 
-<script src="scripts/jquery.min.js"></script>
-<script src="scripts/user_profile.js"></script>
-<link href="css/bootstrap-4.0.0.css" rel="stylesheet">
-<link rel="stylesheet" href="styles/main.css">
-<link rel="stylesheet" href="styles/navigation.css">
-<link rel="stylesheet" href="styles/user_profile.css">
-<!-- Icon Library for Stars -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="scripts/jquery.min.js"></script>
+  <script src="scripts/user_profile.js"></script>
+  <link href="css/bootstrap-4.0.0.css" rel="stylesheet">
+  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="styles/navigation.css">
+  <link rel="stylesheet" href="styles/user_profile.css">
+  <!-- Icon Library for Stars -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <header>
   <nav class="navigationBar"><a href="/"><img src="images/logo.png" class="logoPos" alt="uniMeet"></a>
@@ -28,90 +28,74 @@
 </header>
 
 <body>
-<div style="height: 64px"></div>
-<div class="user_profile_main">
-  <div class="backgroundColorView"></div>
-  <div class="shortcut_container">
-    <button id="messageBtn" class=" button shortcut_buttons">Message</button>
-    <button id="friendBtn" class=" button shortcut_buttons">Add Friend</button>
-    <button id="rejBtn" class=" button shortcut_buttons"></button>
-    <button class="button shortcut_buttons">More</button>
+  <div style="height: 64px"></div>
+  <div class="user_profile_main">
+    <div class="backgroundColorView"></div>
+    <div class="shortcut_container">
+      <button id="messageBtn" class=" button shortcut_buttons">Message</button>
+      <button id="friendBtn" class=" button shortcut_buttons">Add Friend</button>
+      <button id="rejBtn" class=" button shortcut_buttons">Block User</button>
+      <button class="button shortcut_buttons">More</button>
+    </div>
+    <div class="avatar"> <img id="profilePicture" class="profilePicture"> </div>
   </div>
-  <div class="avatar"> <img id="profilePicture" class="profilePicture"> </div>
-</div>
-<div class="mainView">
-  <section class="bioView">
-    <h1 id="profileNameLabel" class="subHeader">Profile</h1>
-    <h5 id="bioLabel" class="smallText"></h5>
-    <br>
-    <h3 class="table_title primaryColour">About</h3>
-    <h3 id="ageLabel" class="smallText lightTextColour">Age:</h3>
-    <h3 id="uniLabel" class="smallText lightTextColour">University:</h3>
-    <h3 id="yearLabel" class="smallText lightTextColour">Year:</h3>
-    <br>
-    <h3 class="table_title primaryColour">Student Email</h3>
-    <h3 id="studentEmail" class="smallText lightTextColour">--</h3>
-    <br>
-    <h3 class="table_title primaryColour">Personal Email</h3>
-    <h3 id="personalEmail" class="smallText lightTextColour">--</h3>
-    <br>
-    <h3 class="table_title primaryColour">Mobile</h3>
-    <h3 id="mobile" class="smallText lightTextColour">--</h3>
-  </section>
-  <section class="infoView">
-    <h2 class="subHeader">Rating</h2>
-    <h3 class="table_title primaryColour">Average Rating</h3>
-    <span id="averageRating" class="bodyText lightTextColour">No ratings yet</span><br>
-    <div class="star-average">
-      <input id="5" type="radio" name="averageRating" onclick="return false;">
-      <label for="5"> <i class="active fa fa-star" aria-hidden="true"></i> </label>
-      <input id="4" type="radio" name="averageRating" onclick="return false;">
-      <label for="4"> <i class="active fa fa-star" aria-hidden="true"></i> </label>
-      <input id="3" type="radio" name="averageRating" onclick="return false;">
-      <label for="3"> <i class="active fa fa-star" aria-hidden="true"></i> </label>
-      <input id="2" type="radio" name="averageRating" onclick="return false;">
-      <label for="2"> <i class="active fa fa-star" aria-hidden="true"></i> </label>
-      <input id="1" type="radio" name="averageRating" onclick="return false;">
-      <label for="1"> <i class="active fa fa-star" aria-hidden="true"></i> </label>
-    </div>
-    <h3 class="table_title primaryColour" id="yourRatingText" style="display: none;">Your Rating</h3>
-    <div class="star-rating" id="yourRating" style="display: none;">
-      <input id="star-5" type="radio" name="rating" value=5>
-      <label for="star-5" title="5 stars"> <i class="active fa fa-star" aria-hidden="true"></i> </label>
-      <input id="star-4" type="radio" name="rating" value=4>
-      <label for="star-4" title="4 stars"> <i class="active fa fa-star" aria-hidden="true"></i> </label>
-      <input id="star-3" type="radio" name="rating" value=3>
-      <label for="star-3" title="3 stars"> <i class="active fa fa-star" aria-hidden="true"></i> </label>
-      <input id="star-2" type="radio" name="rating" value=2>
-      <label for="star-2" title="2 stars"> <i class="active fa fa-star" aria-hidden="true"></i> </label>
-      <input id="star-1" type="radio" name="rating" value=1>
-      <label for="star-1" title="1 star"> <i class="active fa fa-star" aria-hidden="true"></i> </label>
-    </div>
-<!--
-	  <section>
-		  <div class="container">
-      <div class="row">
-          <div class="col-lg-12 mb-5 mt-5 text-left">
-          <h1 class="headerText">My Matches</h1>
-          <input type="button" class="refresh_button" id="refreshButton" value="Refresh" disabled>
-        </div>
+  <div class="mainView">
+    <section class="bioView">
+      <h1 id="profileNameLabel" class="subHeader">Profile</h1>
+      <h5 id="bioLabel" class="smallText"></h5>
+      <br>
+      <h3 class="table_title primaryColour">About</h3>
+      <h3 id="ageLabel" class="smallText lightTextColour">Age:</h3>
+      <h3 id="uniLabel" class="smallText lightTextColour">University:</h3>
+      <h3 id="yearLabel" class="smallText lightTextColour">Year:</h3>
+      <br>
+      <h3 class="table_title primaryColour">Student Email</h3>
+      <h3 id="studentEmail" class="smallText lightTextColour">--</h3>
+      <br>
+      <h3 class="table_title primaryColour">Personal Email</h3>
+      <h3 id="personalEmail" class="smallText lightTextColour">--</h3>
+      <br>
+      <h3 class="table_title primaryColour">Mobile</h3>
+      <h3 id="mobile" class="smallText lightTextColour">--</h3>
+    </section>
+    <section class="infoView">
+      <h2 class="subHeader">Rating</h2>
+      <h3 class="table_title primaryColour">Average Rating</h3>
+      <span id="averageRating" class="bodyText lightTextColour">No ratings yet</span><br>
+      <div class="star-average">
+        <input id="5" type="radio" name="averageRating" onclick="return false;">
+        <label for="5"> <i class="active fa fa-star" aria-hidden="true"></i> </label>
+        <input id="4" type="radio" name="averageRating" onclick="return false;">
+        <label for="4"> <i class="active fa fa-star" aria-hidden="true"></i> </label>
+        <input id="3" type="radio" name="averageRating" onclick="return false;">
+        <label for="3"> <i class="active fa fa-star" aria-hidden="true"></i> </label>
+        <input id="2" type="radio" name="averageRating" onclick="return false;">
+        <label for="2"> <i class="active fa fa-star" aria-hidden="true"></i> </label>
+        <input id="1" type="radio" name="averageRating" onclick="return false;">
+        <label for="1"> <i class="active fa fa-star" aria-hidden="true"></i> </label>
       </div>
-    </div>
-    <div class="container">
-      <div id="enrolledCoursesCollectionView" class="row"> 
+      <h3 class="table_title primaryColour" id="yourRatingText" style="display: none;">Your Rating</h3>
+      <div class="star-rating" id="yourRating" style="display: none;">
+        <input id="star-5" type="radio" name="rating" value=5>
+        <label for="star-5" title="5 stars"> <i class="active fa fa-star" aria-hidden="true"></i> </label>
+        <input id="star-4" type="radio" name="rating" value=4>
+        <label for="star-4" title="4 stars"> <i class="active fa fa-star" aria-hidden="true"></i> </label>
+        <input id="star-3" type="radio" name="rating" value=3>
+        <label for="star-3" title="3 stars"> <i class="active fa fa-star" aria-hidden="true"></i> </label>
+        <input id="star-2" type="radio" name="rating" value=2>
+        <label for="star-2" title="2 stars"> <i class="active fa fa-star" aria-hidden="true"></i> </label>
+        <input id="star-1" type="radio" name="rating" value=1>
+        <label for="star-1" title="1 star"> <i class="active fa fa-star" aria-hidden="true"></i> </label>
       </div>
-		</div>
-		  </section>
--->
-    <h2 class="subHeader">Enrolled Courses</h2>
+      <h2 class="subHeader">Enrolled Courses</h2>
       <div class="container">
         <div id="enrolledCoursesCollectionView" class="row enrolledCoursesCollectionView"></div>
       </div>
-    <h2 class="subHeader">Interests</h2>
-    <div class="container">
-      <div id="interestsCollectionView" class="row enrolledCoursesCollectionView"></div>
-		</div>
-  </section>
-</div>
+      <h2 class="subHeader">Interests</h2>
+      <div class="container">
+        <div id="interestsCollectionView" class="row enrolledCoursesCollectionView"></div>
+      </div>
+    </section>
+  </div>
 </body>
 </html>
