Fixed more button problems, cleaned up and removed obsolete functions, added some CSS for button clicks

--- a/UniMeet/public/user_profile.html
+++ b/UniMeet/public/user_profile.html
@@ -34,8 +34,9 @@
     <div class="shortcut_container">
       <button id="messageBtn" class=" button shortcut_buttons">Message</button>
       <button id="friendBtn" class=" button shortcut_buttons">Add Friend</button>
-      <button id="rejBtn" class=" button shortcut_buttons">Block User</button>
-      <button class="button shortcut_buttons">More</button>
+      <button id="rejBtn" class=" button shortcut_buttons" style="display: none;">Reject Request</button>
+      <button id="blockBtn" class=" button shortcut_buttons">Block</button>
+      <!-- <button class="button shortcut_buttons">More</button>-->
     </div>
     <div class="avatar"> <img id="profilePicture" class="profilePicture"> </div>
   </div>
