Edit Profile Page Block List and Friend Request

--- a/UniMeet/public/messaging.html
+++ b/UniMeet/public/messaging.html
@@ -18,6 +18,7 @@
 <title>uniMeet</title>
 <script src="scripts/jquery.min.js"></script>
 <script src="scripts/messaging.js"></script>
+	<script src="scripts/navigation.js"></script>
 <script src="scripts/main.js"></script>
 
 <!-- Bootstrap -->
@@ -26,9 +27,16 @@
 <link href="styles/navigation.css" rel="stylesheet">
 <link href="styles/messaging.css" rel="stylesheet">
 </head>
+	
 <header>
-  <nav class="navigationBar"><a href="/"><img src="images/logo.png" class="logoPos" alt="uniMeet"></a>
-    <div class="menuItems"><a href="/matching.html">Matches</a><a href="/friends.html">Friends</a><a href="/messagingOld.html">Messages</a><a href="" id="logoutBtn">Log Out</a></div>
+  <nav class="navigationBar">
+    <a href="/"><img src="images/logo.png" class="logoPos" alt="uniMeet"></a>
+    <div class="menuItems">
+      <a href="/matching.html">Matches</a>
+      <a href="/friends.html">Friends</a>
+      <a href="/messaging.html">Messages</a>
+      <a href="/edit_profile.html"><img id="profileIcon" class="nav_profile_image"></a>
+    </div>
   </nav>
 </header>
 
