--- a/UniMeet/public/user_messaging.html
+++ b/UniMeet/public/user_messaging.html
@@ -16,6 +16,7 @@
   <title>uniMeet</title>
 	
 <script src="scripts/messaging.js"></script>
+	<script src="scripts/navigation.js"></script>
 <link rel="stylesheet" href="styles/main.css">
 <link href="styles/navigation.css" rel="stylesheet">
 <link rel="stylesheet" href="styles/messaging.css">
