--- a/UniMeet/public/user_profile.html
+++ b/UniMeet/public/user_profile.html
@@ -14,6 +14,7 @@
 
   <script src="scripts/jquery.min.js"></script>
   <script src="scripts/user_profile.js"></script>
+	<script src="scripts/navigation.js"></script>
   <link href="css/bootstrap-4.0.0.css" rel="stylesheet">
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="styles/navigation.css">
@@ -21,9 +22,16 @@
   <!-- Icon Library for Stars -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<header>
-  <nav class="navigationBar"><a href="/"><img src="images/logo.png" class="logoPos" alt="uniMeet"></a>
-    <div class="menuItems"><a href="/matching.html">Matches</a><a href="/friends.html">Friends</a><a href="/messaging.html">Messages</a><a href="" id="logoutBtn">Log Out</a></div>
+
+	<header>
+  <nav class="navigationBar">
+    <a href="/"><img src="images/logo.png" class="logoPos" alt="uniMeet"></a>
+    <div class="menuItems">
+      <a href="/matching.html">Matches</a>
+      <a href="/friends.html">Friends</a>
+      <a href="/messaging.html">Messages</a>
+      <a href="/edit_profile.html"><img id="profileIcon" class="nav_profile_image"></a>
+    </div>
   </nav>
 </header>
 
