--- a/UniMeet/public/friends.html
+++ b/UniMeet/public/friends.html
@@ -21,15 +21,14 @@
 </head>
     
 <header>
-<nav class="navigationBar">
-<a href="/"><img src="images/logo.png" class="logoPos" alt="uniMeet"></a>
-<div class="menuItems">
-    <a href="/matching.html">Matches</a> 
-    <a href="/friends.html">Friends</a> 
-    <a href="/messaging.html">Messages</a> 
-    <a href="" id="logoutBtn">Log Out</a> 
-</div>
-</nav>
+  <nav class="navigationBar">
+    <a href="/"><img src="images/logo.png" class="logoPos" alt="uniMeet"></a>
+    <div class="menuItems">
+      <a href="/matching.html">Matches</a>
+      <a href="/friends.html">Friends</a>
+      <a href="/messaging.html">Messages</a>
+<a href="/edit_profile.html"><img id="profileIcon" class="nav_profile_image"></a>    </div>
+  </nav>
 </header>
 
 <body>
