--- a/UniMeet/public/matching.html
+++ b/UniMeet/public/matching.html
@@ -32,6 +32,9 @@
       <a href="/friends.html">Friends</a>
       <a href="/messaging.html">Messages</a>
       <a href="/edit_profile.html"><img id="profileIcon" class="nav_profile_image"></a>
+      <!-- Bringing this back for testing -->
+      <a href="" id="logoutBtn" onclick="logOut()">Log Out</a>
+      <!-- Bringing this back for testing -->
     </div>
   </nav>
 </header>
