Added Friend Requests section to Friends page, added placeholder profile images

--- a/UniMeet/public/user_profile.html
+++ b/UniMeet/public/user_profile.html
@@ -30,7 +30,7 @@
       <a href="/matching.html">Matches</a>
       <a href="/friends.html">Friends</a>
       <a href="/messaging.html">Messages</a>
-      <a href="/edit_profile.html"><img id="profileIcon" class="nav_profile_image"></a>
+      <a href="/edit_profile.html"><img id="profileIcon" class="nav_profile_image" src="images/profile_placeholder.png"></a>
     </div>
   </nav>
 </header>
@@ -46,7 +46,7 @@
       <button id="blockBtn" class=" button shortcut_buttons">Block</button>
       <!-- <button class="button shortcut_buttons">More</button>-->
     </div>
-    <div class="avatar"> <img id="profilePicture" class="profilePicture"> </div>
+    <div class="avatar"> <img id="profilePicture" class="profilePicture" src="images/profile_placeholder.png"> </div>
   </div>
   <div class="mainView">
     <section class="bioView">
