--- a/UniMeet/public/edit_profile.html
+++ b/UniMeet/public/edit_profile.html
@@ -21,7 +21,7 @@
 </head>
 <header>
   <nav class="navigationBar"><a href="/"><img src="images/logo.png" class="logoPos" alt="uniMeet"></a>
-    <div class="menuItems"><a href="/matching.html">Matches</a><a href="/friends.html">Friends</a><a href="/messaging.html">Messages</a><a href="/edit_profile.html"><img id="profileIcon" class="nav_profile_image"></a>
+    <div class="menuItems"><a href="/matching.html">Matches</a><a href="/friends.html">Friends</a><a href="/messaging.html">Messages</a><a href="/edit_profile.html"><img id="profileIcon" class="nav_profile_image" src="images/profile_placeholder.png"></a>
   </nav>
 </header>
 
