--- a/UniMeet/public/matching.html
+++ b/UniMeet/public/matching.html
@@ -31,7 +31,7 @@
       <a href="/matching.html">Matches</a>
       <a href="/friends.html">Friends</a>
       <a href="/messaging.html">Messages</a>
-      <a href="/edit_profile.html"><img id="profileIcon" class="nav_profile_image"></a>
+      <a href="/edit_profile.html"><img id="profileIcon" class="nav_profile_image" src="images/profile_placeholder.png"></a>
       <!-- Bringing this back for testing -->
       <a href="" id="logoutBtn" onclick="logOut()">Log Out</a>
       <!-- Bringing this back for testing -->
