--- a/UniMeet/public/messaging.html
+++ b/UniMeet/public/messaging.html
@@ -35,7 +35,7 @@
       <a href="/matching.html">Matches</a>
       <a href="/friends.html">Friends</a>
       <a href="/messaging.html">Messages</a>
-      <a href="/edit_profile.html"><img id="profileIcon" class="nav_profile_image"></a>
+      <a href="/edit_profile.html"><img id="profileIcon" class="nav_profile_image" src="images/profile_placeholder.png"></a>
     </div>
   </nav>
 </header>
