--- a/UniMeet/public/messaging.html
+++ b/UniMeet/public/messaging.html
@@ -33,7 +33,7 @@
     <a href="/"><img src="images/logo.png" class="logoPos" alt="uniMeet"></a>
     <div class="menuItems">
       <a href="/matching.html">Matches</a>
-      <a href="/friends.html">Friends</a>
+      <a id="friendsNavText" href="/friends.html">Friends</a>
       <a href="/messaging.html">Messages</a>
       <a href="/edit_profile.html"><img id="profileIcon" class="nav_profile_image" src="images/profile_placeholder.png"></a>
     </div>
