--- a/UniMeet/public/navigation.html
+++ b/UniMeet/public/navigation.html
@@ -18,7 +18,7 @@
     <div class="menuItems">
       <a href="/matching.html">Recommendations</a>
       <a href="/matching.html">My Matches</a>
-      <a href="/friends.html">Friends</a>
+      <a id="friendsNavText" href="/friends.html">Friends</a>
       <a href="/messaging.html">Messages</a>
       <a href="" id="logoutBtn">Log Out</a>
     </div>
