--- a/UniMeet/public/profile.html
+++ b/UniMeet/public/profile.html
@@ -28,7 +28,7 @@
     <a href="/"><img src="images/logo.png" class="logoPos" alt="uniMeet"></a>
     <div class="menuItems">
       <a href="/matching.html">Matches</a>
-      <a href="/friends.html">Friends</a>
+      <a id="friendsNavText" href="/friends.html">Friends</a>
       <a href="/messaging.html">Messages</a>
       <a href="/profile.html"><img id="profileIcon" class="nav_profile_image" src="images/profile_placeholder.png"></a>
     </div>
@@ -129,7 +129,7 @@
     <a href="/"><img src="images/logo.png" class="logoPos" alt="uniMeet"></a>
     <div class="menuItems">
       <a href="/matching.html">Matches</a>
-      <a href="/friends.html">Friends</a>
+      <a id="friendsNavText" href="/friends.html">Friends</a>
       <a href="/messaging.html">Messages</a>
       <a href="/profile.html"><img id="profileIcon" class="nav_profile_image" src="images/profile_placeholder.png"></a>
     </div>
