Started work on Admin interest add/removal page with a template

--- a/UniMeet/public/user_profile.html
+++ b/UniMeet/public/user_profile.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="styles/navigation.css">
   <link rel="stylesheet" href="styles/user_profile.css">
   <!-- Icon Library for Stars -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="styles/font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 
 	<header>
