--- a/UniMeet/public/edit_profile.html
+++ b/UniMeet/public/edit_profile.html
@@ -67,31 +67,33 @@
 		<h3 class="table_title primaryColour">Mobile</h3>
     <input type="text" id="mobileField" class="form_field">
     </input>
+	<h1 class="headerText">Education</h1>
+	<div class="tab">
+		<h3 class="table_title primaryColour">University</h3>
+      <select id="university" oninput="this.className = ''" name="university" class="form_field">
+      </select>
+		<h3 class="table_title primaryColour">Degree</h3>
+      <select id="degree" oninput="this.className = ''" name="degree" class="form_field">
+      </select>
+    </div>
 	<h1 class="headerText">Enrolled Courses</h1>
 	<div class="tab">
       <p><select id="subject1" oninput="this.className = ''" name="subject2" class="form_field">
-        <option value="">Please select your first course</option>
       </select></p>
       <p><select id="subject2" oninput="this.className = ''" name="subject2" class="form_field">
-        <option value="">Please select your second course</option>
       </select></p>
       <p><select id="subject3" oninput="this.className = ''" name="subject3" class="form_field">
-        <option value="">Please select your third course</option>
       </select></p>
       <p><select id="subject4" oninput="this.className = ''" name="subject4" class="form_field">
-        <option value="">Please select your fourth course</option>
       </select></p>
     </div>
 	<h1 class="headerText">Interests</h1>
 	<div class="tab">
       <p><select id="interest1" oninput="this.className = ''" name="interest1" class="form_field">
-        <option value="" hidden>Interest 1</option>
       </select></p>
       <p><select id="interest2" oninput="this.className = ''" name="interest2" class="form_field">
-        <option value="" hidden>Interest 2</option>
       </select></p>
       <p><select id="interest3" oninput="this.className = ''" name="interest3" class="form_field">
-        <option value="" hidden>Interest 3</option>
       </select></p>
     </div>
   </div>
