--- a/UniMeet/public/admin.html
+++ b/UniMeet/public/admin.html
@@ -51,6 +51,10 @@
                                     <section class="_add-task-form">
                                         <div style="padding-bottom: 10px"><button class="btn btn-light" id="adminRefreshButton" type="button"> <i class="fa fa-undo"></i></button></div>
                                         <div class="form-group"><input class="form-control" type="text" placeholder="Add an admin" id="newAdmin"></div>
+                                        <div class="form-group">
+                                        <input type="radio" name="privilege" id="privilege-1" value="1" disabled> Privilege Level 1<br>
+                                            <input type="radio" name="privilege" id="privilege-2" value="2" disabled checked> Privilege Level 2<br>
+                                        </div>
                                         <div class="form-group"><button class="btn btn-success" type="button" id="newAdminButton">Submit </button></div>
                                     </section>
                                     <section id="adminList-cont" class="_todo-list" style="display: none">
